# ep-mcp

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  DEPLOYMENT.md  LICENSE  README.md  VISION.md  pyproject.toml
ep_mcp/: __init__.py  auth.py  cli.py  config.py  server.py
ep_mcp/embeddings/: __init__.py  azure_openai.py  base.py  cache.py  gemini.py  ollama.py
ep_mcp/index/: __init__.py  chunker.py  manager.py  sqlite_store.py  watcher.py
ep_mcp/pack/: __init__.py  loader.py  manifest.py  models.py
ep_mcp/prompts/: __init__.py  pack_prompts.py
ep_mcp/resources/: pack_resources.py
ep_mcp/retrieval/: __init__.py  engine.py  graph_helpers.py  intent.py  models.py  reranker.py  scorer.py
ep_mcp/tools/: ep_graph_traverse.py  ep_list_topics.py  ep_search.py
scripts/: deploy.sh
tests/integration/: test_index_real_pack.py
tests/unit/: test_adaptive_threshold.py  test_chunker.py  test_config.py  test_deep_graph_expansion.py  test_graph_retrieval.py  test_graph_traverse.py  test_intent_classifier.py  test_length_penalty.py  test_loader.py  test_manifest.py  test_reconstruct.py  test_requires_expansion.py  test_sqlite_store.py
